--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [tool.pytest.ini_options]
 minversion = "6.0"# pytestの最低バージョンを要求
 python_files = "*.py"
-# addopts = "--v -s"
-addopts = "--v "
+addopts = "-vv -s "
 testpaths = "src"
-# markers = [
-#     "unit: mark a test as a unit test",
-#     "integration: mark a test as an integration test",
-# ]
+markers = [
+    "unit: mark a test as a unit test",
+    "integration: mark a test as an integration test",
+]
